Fixed post content input color issue on dark mode
Fixes #718

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3045,6 +3045,10 @@ Usage (In Ghost editor):
         box-shadow: 0 0 1px rgba(255,255,255,0.9);
     }
 
+    .post-full-content input {
+        color: color-mod(var(--midgrey) l(-30%));
+    }
+
     .kg-bookmark-title {
         color: #fff;
     }
